--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ h1 {
   align-items: center;
   box-sizing: border-box;
 }
-h1 h6{
+h1 h6 {
   font-size: 0.9rem;
 }
 input {
@@ -113,7 +113,8 @@ select option {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgba(212, 11, 11, 0.8)
+  color: rgba(212, 11, 11, 0.8);
+  border-radius: 50%;
 }
 .South-Delray-West,
 .South-Delray-Mid,
@@ -121,7 +122,7 @@ select option {
   position: absolute;
   top: 70%;
   right: 6%;
-  height: 15%;
+  height: 25%;
   padding: 0px 5%;
 }
 .South-Boca-West,
@@ -130,7 +131,7 @@ select option {
   position: absolute;
   top: 80%;
   right: 6%;
-  height: 15%;
+  height: 25%;
   padding: 0px 5%;
 }
 .South-Boynton-West,
@@ -139,7 +140,7 @@ select option {
   position: absolute;
   top: 55%;
   right: 5%;
-  height: 15%;
+  height: 25%;
   padding: 0px 5%;
 }
 .Central-West-Palm-Beach-West,
@@ -148,7 +149,7 @@ select option {
   position: absolute;
   top: 30%;
   right: 3%;
-  height: 18%;
+  height: 22%;
   padding: 0px 4%;
 }
 .Central-Lake-Worth-West,
@@ -157,7 +158,7 @@ select option {
   position: absolute;
   top: 44%;
   right: 3%;
-  height: 18%;
+  height: 23%;
   padding: 0px 4%;
 }
 .North-Jupiter-Mid,
@@ -165,7 +166,7 @@ select option {
   position: absolute;
   top: 4%;
   right: 3%;
-  height: 18%;
+  height: 23%;
   padding: 0px 4%;
 }
 .North-Palm-Beach-Gardens-West,
@@ -174,13 +175,13 @@ select option {
   position: absolute;
   top: 15%;
   right: 3%;
-  height: 18%;
+  height: 23%;
   padding: 0px 4%;
 }
 .North-North-Palm-Beach-Mid {
   position: absolute;
   top: 16%;
   right: 12%;
-  height: 15%;
+  height: 20%;
   padding: 0px 2%;
 }
