--- a/src/App.css
+++ b/src/App.css
@@ -185,3 +185,92 @@ select option {
   height: 20%;
   padding: 0px 2%;
 }
+
+@media screen and (max-width:960px ){
+  .App {
+    height: 85%;
+    width: 95%;
+    display: flex;
+  }
+  
+  section {
+    height: 100%;
+    width: 50%;
+    background-color: rgb(6, 15, 25);
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1%;
+  }
+  
+  section img {
+    height: 100%;
+    width: 65%;
+  }
+  
+  .right-side {
+    height: 100%;
+    width: 50%;
+    background-color: rgb(6, 15, 25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width:600px ){
+  
+  #root {
+    height: 180vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(6, 15, 25);
+  }
+  .App {
+    height: 99%;
+    width: 99%;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  section {
+    height: 45%;
+    width: 95%;
+    background-color: rgb(6, 15, 25);
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center;
+    padding: 1%;
+  }
+  
+  section img {
+    height: 100%;
+    width: 90%;
+  }
+  
+  .right-side {
+    height: 55%;
+    width: 95%;
+    background-color: rgb(6, 15, 25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  h1 {
+    text-align: center;
+    height: 25%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+  }
+}
